--- a/yolov5/orders.ipynb
+++ b/yolov5/orders.ipynb
@@ -3163,6 +3163,93 @@
     "for iou in [0.60,0.65,0.70,0.75,0.80,0.85,0.90,0.95,0.40,0.45,0.50,0.55,]:\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mval: \u001b[0mdata=/opt/ml/baseline/level2-object-detection-level2-cv-19/yolov5/data/trash_dy.yaml, weights=['./runs/train/bt4_yolov5x_scratch-high/weights/best.pt'], batch_size=32, imgsz=640, conf_thres=0.01, iou_thres=0.5, task=test, device=, workers=8, single_cls=False, augment=True, verbose=True, save_txt=True, save_hybrid=False, save_conf=True, save_json=True, project=runs/val, name=bt4_yolov5x_scratch-highap0.5conf0.01, exist_ok=False, half=False, dnn=False\n",
+      "WARNING: confidence threshold 0.01 >> 0.001 will produce invalid mAP values.\n",
+      "YOLOv5 🚀 fa24584 torch 1.11.0 CUDA:0 (Tesla V100-PCIE-32GB, 32510MiB)\n",
+      "\n",
+      "Fusing layers... \n",
+      "Model summary: 444 layers, 86233975 parameters, 0 gradients, 204.2 GFLOPs\n",
+      "\u001b[34m\u001b[1mtest: \u001b[0mScanning '/opt/ml/baseline/level2-object-detection-level2-cv-19/dataset/la\u001b[0m\n",
+      "               Class     Images     Labels          P          R     mAP@.5 mAP@\n",
+      "                 all       4871          0          0          0          0          0\n",
+      "Speed: 0.2ms pre-process, 69.2ms inference, 4.0ms NMS per image at shape (32, 3, 640, 640)\n",
+      "\n",
+      "Evaluating pycocotools mAP... saving runs/val/bt4_yolov5x_scratch-highap0.5conf0.01/best_predictions.json...\n",
+      "loading annotations into memory...\n",
+      "pycocotools unable to run: [Errno 2] No such file or directory: '/opt/ml/baseline/level2-object-detection-level2-cv-19/dataset/annotations/instances_val2017.json'\n",
+      "Results saved to \u001b[1mruns/val/bt4_yolov5x_scratch-highap0.5conf0.01\u001b[0m\n",
+      "4870 labels saved to runs/val/bt4_yolov5x_scratch-highap0.5conf0.01/labels\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n",
+      "Exception ignored in: <function StorageWeakRef.__del__ at 0x7fe86c8c4160>\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/multiprocessing/reductions.py\", line 36, in __del__\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/torch/storage.py\", line 520, in _free_weak_ref\n",
+      "AttributeError: 'NoneType' object has no attribute '_free_weak_ref'\n"
+     ]
+    }
+   ],
+   "source": [
+    "iou = 0.5\n",
+    "conf = 0.01\n",
+    "model = \"bt4_yolov5x_scratch-high\" \n",
+    "!python val.py --task test --name {model}ap{iou}conf{conf} --data trash_dy.yaml --iou {iou} --weight ./runs/train/{model}/weights/best.pt --save-json --save-txt --verbose --save-conf --conf-thres {conf} --augment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
