--- a/yolov5/orders.ipynb
+++ b/yolov5/orders.ipynb
@@ -173,6 +173,25 @@
     "model = \"bt4_yolov5x_scratch-high\" \n",
     "!python val.py --task test --name {model}ap{iou}conf{conf} --data trash_dy.yaml --iou {iou} --weight ./runs/train/{model}/weights/best.pt --save-json --save-txt --verbose --save-conf --conf-thres {conf} --augment"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iou = 1\n",
+    "conf = 0.01\n",
+    "model = \"bt4_yolov5x_scratch-high\" \n",
+    "!python val.py --task val --name test_Ensemble --data trash_dy.yaml --iou 0.01 --weight ./runs/train/yolov5l6-e-200-img-1280-fold-0/weights/best.pt ./runs/train/yolov5l6-e-200-img-1280-fold-1/weights/best.pt --save-json --save-txt --verbose --save-conf --conf-thres 0.01 --augment --img 1280"
+   ]
   }
  ],
  "metadata": {
