--- a/yolov5/orders.ipynb
+++ b/yolov5/orders.ipynb
@@ -192,6 +192,17 @@
     "model = \"bt4_yolov5x_scratch-high\" \n",
     "!python val.py --task val --name test_Ensemble --data trash_dy.yaml --iou 0.01 --weight ./runs/train/yolov5l6-e-200-img-1280-fold-0/weights/best.pt ./runs/train/yolov5l6-e-200-img-1280-fold-1/weights/best.pt --save-json --save-txt --verbose --save-conf --conf-thres 0.01 --augment --img 1280"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python val.py --task test --name full_Ensemble --data trash_dy.yaml --iou 0.07 \\\n",
+    "    --weight ./runs/train/kfold/best_f0.pt ./runs/train/kfold/best_f1.pt ./runs/train/kfold/best_f2.pt ./runs/train/kfold/best_f3.pt ./runs/train/kfold/best_f4.pt \\\n",
+    "    --save-json --save-txt --verbose --save-conf --augment --img 1280"
+   ]
   }
  ],
  "metadata": {
