--- a/DATAResearch/inference/inference_jsontocsv.ipynb
+++ b/DATAResearch/inference/inference_jsontocsv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,20 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_json(\"./best_predictions.json\")"
+    "data = pd.read_json(\"./best_f0_predictions.json\")\n",
+    "confidence = 0.4"
    ]
   },
   {
@@ -48,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4869/4869 [00:13<00:00, 373.23it/s]\n"
+      "100%|██████████| 4871/4871 [00:26<00:00, 180.97it/s]\n"
      ]
     }
    ],
@@ -66,6 +58,8 @@
     "    image_id = i[0]\n",
     "    prediction_string = \"\"\n",
     "    for j in i[1].iterrows():\n",
+    "        if j[1].score < confidence:\n",
+    "            continue\n",
     "        blk = [j[1].category_id, round(j[1].score,15), j[1].bbox[0], j[1].bbox[1], j[1].bbox[0] + j[1].bbox[2], j[1].bbox[1] + j[1].bbox[3]]\n",
     "        blk = list(map(lambda x : str(x) + \" \" ,blk))\n",
     "        for i in blk:\n",
@@ -80,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -111,27 +105,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7 0.97135 607.478 518.568 954.278 1017.63 7 0....</td>\n",
+       "      <td>7 0.98287 604.825 514.406 956.942 1023.5919999...</td>\n",
        "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5 0.91616 351.18 244.334 754.883 691.835 5 0.3...</td>\n",
+       "      <td>5 0.98095 345.005 251.478 754.806 696.483 5 0....</td>\n",
        "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1 0.93835 72.571 271.862 426.84900000000005 60...</td>\n",
+       "      <td>1 0.97 301.633 310.344 1019.517 748.543 1 0.96...</td>\n",
        "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9 0.88561 0.0 438.131 183.741 860.643 9 0.7747...</td>\n",
+       "      <td>9 0.97585 139.554 264.641 914.52 830.3 9 0.949...</td>\n",
        "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0 0.44175 233.943 265.214 867.5459999999999 76...</td>\n",
+       "      <td>1 0.9523 187.535 253.625 872.747 774.303 7 0.9...</td>\n",
        "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -140,14 +134,14 @@
       ],
       "text/plain": [
        "                                    PredictionString       image_id\n",
-       "0  7 0.97135 607.478 518.568 954.278 1017.63 7 0....  test/0000.jpg\n",
-       "1  5 0.91616 351.18 244.334 754.883 691.835 5 0.3...  test/0001.jpg\n",
-       "2  1 0.93835 72.571 271.862 426.84900000000005 60...  test/0002.jpg\n",
-       "3  9 0.88561 0.0 438.131 183.741 860.643 9 0.7747...  test/0003.jpg\n",
-       "4  0 0.44175 233.943 265.214 867.5459999999999 76...  test/0004.jpg"
+       "0  7 0.98287 604.825 514.406 956.942 1023.5919999...  test/0000.jpg\n",
+       "1  5 0.98095 345.005 251.478 754.806 696.483 5 0....  test/0001.jpg\n",
+       "2  1 0.97 301.633 310.344 1019.517 748.543 1 0.96...  test/0002.jpg\n",
+       "3  9 0.97585 139.554 264.641 914.52 830.3 9 0.949...  test/0003.jpg\n",
+       "4  1 0.9523 187.535 253.625 872.747 774.303 7 0.9...  test/0004.jpg"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,6 +152,154 @@
     "submission['PredictionString'] = prediction_strings\n",
     "submission['image_id'] = file_names\n",
     "submission.to_csv('./submission.csv', index=None)\n",
+    "submission.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Confidence edit  \n",
+    "### COCO json-> CSV\n",
+    "에러 수정 중"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loading annotations into memory...\n",
+      "Done (t=5.21s)\n",
+      "creating index...\n",
+      "index created!\n"
+     ]
+    }
+   ],
+   "source": [
+    "coco = COCO(\"./csv_to_json2.json\")\n",
+    "confidence = 0.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4871/4871 [00:00<00:00, 9063.42it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_names = []\n",
+    "strings = []\n",
+    "for image_id in tqdm(coco.getImgIds()):\n",
+    "    image_info = coco.loadImgs(image_id)[0]\n",
+    "    annotation_id = coco.getAnnIds(imgIds=image_info['id'])\n",
+    "    annotation_info_list = coco.loadAnns(annotation_id)\n",
+    "    string = \"\"\n",
+    "    for ano in annotation_info_list:\n",
+    "        if ano['score'] < confidence:\n",
+    "            continue\n",
+    "        blk = [ano['category_id'], ano['score'], ano['bbox'][0], ano['bbox'][1], ano['bbox'][2] + ano['bbox'][0], ano['bbox'][3] + ano['bbox'][1]]\n",
+    "        blk = list(map(lambda x : str(x) + \" \" ,blk))\n",
+    "        for i in blk:\n",
+    "            string += i\n",
+    "    \n",
+    "    file_name = \"test/\" + image_info['file_name']\n",
+    "    strings.append(string)\n",
+    "    \n",
+    "    file_names.append(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PredictionString</th>\n",
+       "      <th>image_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7 0.98287 604.825 514.406 956.942 1023.5919999...</td>\n",
+       "      <td>test/test/0000.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5 0.98095 345.005 251.478 754.806 696.483 5 0....</td>\n",
+       "      <td>test/test/0001.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1 0.97 301.633 310.344 1019.517 748.543 1 0.96...</td>\n",
+       "      <td>test/test/0002.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9 0.97585 139.554 264.641 914.52 830.3 9 0.949...</td>\n",
+       "      <td>test/test/0003.jpg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1 0.9523 187.535 253.625 872.747 774.303 7 0.9...</td>\n",
+       "      <td>test/test/0004.jpg</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    PredictionString            image_id\n",
+       "0  7 0.98287 604.825 514.406 956.942 1023.5919999...  test/test/0000.jpg\n",
+       "1  5 0.98095 345.005 251.478 754.806 696.483 5 0....  test/test/0001.jpg\n",
+       "2  1 0.97 301.633 310.344 1019.517 748.543 1 0.96...  test/test/0002.jpg\n",
+       "3  9 0.97585 139.554 264.641 914.52 830.3 9 0.949...  test/test/0003.jpg\n",
+       "4  1 0.9523 187.535 253.625 872.747 774.303 7 0.9...  test/test/0004.jpg"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission = pd.DataFrame()\n",
+    "submission['PredictionString'] = strings\n",
+    "submission['image_id'] = file_names\n",
+    "submission.to_csv('./submissionCOCO.csv', index=None)\n",
     "submission.head()"
    ]
   },
@@ -188,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   },
   "orig_nbformat": 4
  },
