--- a/DATAResearch/inference/inference_jsontocsv.ipynb
+++ b/DATAResearch/inference/inference_jsontocsv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,49 +14,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_json(\"./full_train.json\")\n",
-    "confidence = 0.001\n",
-    "dataset = \"train\" "
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "image_id                                        0\n",
-    "\n",
-    "category_id                                     7\n",
-    "\n",
-    "bbox           [607.478, 518.568, 346.8, 499.062]\n",
-    "\n",
-    "score                                     0.97135\n",
-    "\n",
-    "test/0015.jpg"
+    "## YOLO json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_json(\"./yolo.json\")\n",
+    "confidence = 0.40\n",
+    "dataset = \"train\" #\"test\"\n",
+    "dataset_len = 4883 #4871"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3906/3906 [00:37<00:00, 102.83it/s]\n"
+      "100%|██████████| 3906/3906 [00:17<00:00, 218.98it/s]\n"
      ]
     }
    ],
    "source": [
     "prediction_strings = []\n",
     "file_names = []\n",
+    "idx = 0\n",
+    "\n",
     "for i in tqdm(data.groupby(by=[\"image_id\"])):\n",
     "    image_id = i[0]\n",
+    "    if(idx < image_id): \n",
+    "        while(idx != image_id):\n",
+    "            prediction_strings.append(\" \")\n",
+    "            file_names.append(dataset + \"/\" + str(idx + 10000)[1:] + \".jpg\")\n",
+    "            idx += 1\n",
+    "            \n",
     "    prediction_string = \"\"\n",
     "    for j in i[1].iterrows():\n",
     "        if j[1].score < confidence:\n",
@@ -68,14 +69,20 @@
     "        #print(blk)\n",
     "        #print(j[1]) \n",
     "    file_name = dataset + \"/\" + str(image_id + 10000)[1:] + \".jpg\"\n",
-    "\n",
+    "    idx += 1\n",
     "    prediction_strings.append(prediction_string)\n",
-    "    file_names.append(file_name)\n"
+    "    file_names.append(file_name)\n",
+    "\n",
+    "if(idx < dataset_len): \n",
+    "    while(idx == dataset_len - 1):\n",
+    "        prediction_strings.append(\" \")\n",
+    "        file_names.append(dataset + \"/\" + str(idx + 10000)[1:] + \".jpg\")\n",
+    "        idx += 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -106,43 +113,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0 0.97872 199.491 193.15 745.552 662.52 7 0.00...</td>\n",
-       "      <td>test/0000.jpg</td>\n",
+       "      <td>0 0.97872 199.491 193.15 745.552 662.52</td>\n",
+       "      <td>train/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>3 0.97974 265.743 162.129 897.924 675.842 7 0....</td>\n",
-       "      <td>test/0002.jpg</td>\n",
+       "      <td></td>\n",
+       "      <td>train/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2 0.97316 462.929 369.406 695.233 627.20800000...</td>\n",
-       "      <td>test/0003.jpg</td>\n",
+       "      <td>3 0.97974 265.743 162.129 897.924 675.842</td>\n",
+       "      <td>train/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1 0.96775 858.852 412.719 1023.088 613.342 1 0...</td>\n",
-       "      <td>test/0004.jpg</td>\n",
+       "      <td>2 0.97316 462.929 369.406 695.233 627.20800000...</td>\n",
+       "      <td>train/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1 0.98052 494.124 626.738 842.008 949.46600000...</td>\n",
-       "      <td>test/0005.jpg</td>\n",
+       "      <td>1 0.96775 858.852 412.719 1023.088 613.342 1 0...</td>\n",
+       "      <td>train/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    PredictionString       image_id\n",
-       "0  0 0.97872 199.491 193.15 745.552 662.52 7 0.00...  test/0000.jpg\n",
-       "1  3 0.97974 265.743 162.129 897.924 675.842 7 0....  test/0002.jpg\n",
-       "2  2 0.97316 462.929 369.406 695.233 627.20800000...  test/0003.jpg\n",
-       "3  1 0.96775 858.852 412.719 1023.088 613.342 1 0...  test/0004.jpg\n",
-       "4  1 0.98052 494.124 626.738 842.008 949.46600000...  test/0005.jpg"
+       "                                    PredictionString        image_id\n",
+       "0           0 0.97872 199.491 193.15 745.552 662.52   train/0000.jpg\n",
+       "1                                                     train/0001.jpg\n",
+       "2         3 0.97974 265.743 162.129 897.924 675.842   train/0002.jpg\n",
+       "3  2 0.97316 462.929 369.406 695.233 627.20800000...  train/0003.jpg\n",
+       "4  1 0.96775 858.852 412.719 1023.088 613.342 1 0...  train/0004.jpg"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,50 +169,41 @@
    "source": [
     "---\n",
     "## Confidence edit  \n",
-    "### COCO json-> CSV\n",
-    "에러 수정 중"
+    "### COCO json-> CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading annotations into memory...\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "annotation file format <class 'list'> not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/opt/ml/baseline/level2-object-detection-level2-cv-19/DATAResearch/inference/inference_jsontocsv.ipynb Cell 7'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B101.101.216.82/opt/ml/baseline/level2-object-detection-level2-cv-19/DATAResearch/inference/inference_jsontocsv.ipynb#ch0000017vscode-remote?line=0'>1</a>\u001b[0m coco \u001b[39m=\u001b[39m COCO(\u001b[39m\"\u001b[39;49m\u001b[39m./full_train.json\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m/opt/conda/lib/python3.8/site-packages/pycocotools/coco.py:83\u001b[0m, in \u001b[0;36mCOCO.__init__\u001b[0;34m(self, annotation_file)\u001b[0m\n\u001b[1;32m     <a href='file:///opt/conda/lib/python3.8/site-packages/pycocotools/coco.py?line=80'>81</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(annotation_file, \u001b[39m'\u001b[39m\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m     <a href='file:///opt/conda/lib/python3.8/site-packages/pycocotools/coco.py?line=81'>82</a>\u001b[0m     dataset \u001b[39m=\u001b[39m json\u001b[39m.\u001b[39mload(f)\n\u001b[0;32m---> <a href='file:///opt/conda/lib/python3.8/site-packages/pycocotools/coco.py?line=82'>83</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mtype\u001b[39m(dataset)\u001b[39m==\u001b[39m\u001b[39mdict\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mannotation file format \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m not supported\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(\u001b[39mtype\u001b[39m(dataset))\n\u001b[1;32m     <a href='file:///opt/conda/lib/python3.8/site-packages/pycocotools/coco.py?line=83'>84</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mDone (t=\u001b[39m\u001b[39m{:0.2f}\u001b[39;00m\u001b[39ms)\u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(time\u001b[39m.\u001b[39mtime()\u001b[39m-\u001b[39m tic))\n\u001b[1;32m     <a href='file:///opt/conda/lib/python3.8/site-packages/pycocotools/coco.py?line=84'>85</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdataset \u001b[39m=\u001b[39m dataset\n",
-      "\u001b[0;31mAssertionError\u001b[0m: annotation file format <class 'list'> not supported"
+      "loading annotations into memory...\n",
+      "Done (t=0.93s)\n",
+      "creating index...\n",
+      "index created!\n"
      ]
     }
    ],
    "source": [
-    "coco = COCO(\"./csv_to_json2.json\")\n",
-    "confidence = 0.4"
+    "coco = COCO(\"./coco.json\")\n",
+    "confidence = 0.4\n",
+    "#dataset = \"test\" if coco.loadImgs(coco.getImgIds()[0])[0]['file_name'][:4] == 'test' else \"train\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4871/4871 [00:00<00:00, 9063.42it/s]\n"
+      "100%|██████████| 4871/4871 [00:00<00:00, 18123.74it/s]\n"
      ]
     }
    ],
@@ -225,7 +223,7 @@
     "        for i in blk:\n",
     "            string += i\n",
     "    \n",
-    "    file_name = \"test/\" + image_info['file_name']\n",
+    "    file_name = image_info['file_name']\n",
     "    strings.append(string)\n",
     "    \n",
     "    file_names.append(file_name)"
@@ -233,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,43 +262,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>7 0.98287 604.825 514.406 956.942 1023.5919999...</td>\n",
-       "      <td>test/test/0000.jpg</td>\n",
+       "      <td>7 0.998166561126709 219.02938842773438 55.1456...</td>\n",
+       "      <td>test/0000.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5 0.98095 345.005 251.478 754.806 696.483 5 0....</td>\n",
-       "      <td>test/test/0001.jpg</td>\n",
+       "      <td>3 0.919633686542511 340.2513122558594 265.1795...</td>\n",
+       "      <td>test/0001.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1 0.97 301.633 310.344 1019.517 748.543 1 0.96...</td>\n",
-       "      <td>test/test/0002.jpg</td>\n",
+       "      <td>1 0.9743971824645996 289.17340087890625 291.05...</td>\n",
+       "      <td>test/0002.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9 0.97585 139.554 264.641 914.52 830.3 9 0.949...</td>\n",
-       "      <td>test/test/0003.jpg</td>\n",
+       "      <td>9 0.98899906873703 166.99288940429688 278.7833...</td>\n",
+       "      <td>test/0003.jpg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1 0.9523 187.535 253.625 872.747 774.303 7 0.9...</td>\n",
-       "      <td>test/test/0004.jpg</td>\n",
+       "      <td>9 0.5510952472686768 443.4324951171875 411.139...</td>\n",
+       "      <td>test/0004.jpg</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    PredictionString            image_id\n",
-       "0  7 0.98287 604.825 514.406 956.942 1023.5919999...  test/test/0000.jpg\n",
-       "1  5 0.98095 345.005 251.478 754.806 696.483 5 0....  test/test/0001.jpg\n",
-       "2  1 0.97 301.633 310.344 1019.517 748.543 1 0.96...  test/test/0002.jpg\n",
-       "3  9 0.97585 139.554 264.641 914.52 830.3 9 0.949...  test/test/0003.jpg\n",
-       "4  1 0.9523 187.535 253.625 872.747 774.303 7 0.9...  test/test/0004.jpg"
+       "                                    PredictionString       image_id\n",
+       "0  7 0.998166561126709 219.02938842773438 55.1456...  test/0000.jpg\n",
+       "1  3 0.919633686542511 340.2513122558594 265.1795...  test/0001.jpg\n",
+       "2  1 0.9743971824645996 289.17340087890625 291.05...  test/0002.jpg\n",
+       "3  9 0.98899906873703 166.99288940429688 278.7833...  test/0003.jpg\n",
+       "4  9 0.5510952472686768 443.4324951171875 411.139...  test/0004.jpg"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +307,7 @@
     "submission = pd.DataFrame()\n",
     "submission['PredictionString'] = strings\n",
     "submission['image_id'] = file_names\n",
-    "submission.to_csv('./submissionCOCO.csv', index=None)\n",
+    "submission.to_csv('./submissionCOCO_040.csv', index=None)\n",
     "submission.head()"
    ]
   },
